Fix: Add build flag to resolve Gradle task conflict

--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -9,6 +9,6 @@ workflows:
       - name: Get Flutter dependencies
         script: flutter pub get
       - name: Build release APK
-        script: flutter build apk --release
+        script: flutter build apk --release --android-skip-build-dependency-validation
     artifacts:
       - build/app/outputs/flutter-apk/app-release.apk
